Resolves: fdo#44856 skew artificial fonts before glyph or layout rotation